--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.10"
+    ext.hilt_version = "2.28-alpha"
+    ext.hilt_jetpack_version = '1.0.0-alpha02'
+    ext.activity_ktx_version = "1.1.0"
+    ext.fragment_ktx_version = '1.2.5'
+    ext.lifecycle_version = "2.2.0"
+    ext.room_version = "2.2.5"
+    ext.retrofit_version = "2.9.0"
+    ext.logging_interceptor_version = "4.9.0"
+
     repositories {
         google()
         jcenter()
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
