--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext.hilt_jetpack_version = '1.0.0-alpha02'
     ext.activity_ktx_version = "1.1.0"
     ext.fragment_ktx_version = '1.2.5'
+    ext.navigation_version = "2.3.1"
     ext.lifecycle_version = "2.2.0"
     ext.room_version = "2.2.5"
     ext.retrofit_version = "2.9.0"
