--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dargoz.capstone">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".CapstoneApp"
         android:allowBackup="false"
@@ -11,18 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".ui.ui.TestActivity"></activity>
+        <activity android:name=".ui.DetailFavoriteActivity" />
         <activity
-            android:name="com.dargoz.capstone.MainActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="locale">
+            android:name=".MainActivity"
+            android:configChanges="locale"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
     </application>
 
 </manifest>
