--- a/favorite/src/main/AndroidManifest.xml
+++ b/favorite/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <dist:module
         dist:instant="false"
-        dist:title="@string/title_favorite">
+        dist:title="favorite">
         <dist:delivery>
             <dist:on-demand />
         </dist:delivery>
@@ -14,7 +14,7 @@
     </dist:module>
 
     <application>
-        <activity android:name=".FavoriteActivity"></activity>
+        <activity android:name=".FavoriteActivity"/>
     </application>
 
 </manifest>
