--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.20"
+    ext.kotlin_version = '1.4.21'
     ext.hilt_version = "2.29.1-alpha"
     ext.hilt_jetpack_version = '1.0.0-alpha02'
     ext.activity_ktx_version = "1.1.0"
