--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = '1.4.21'
-    ext.hilt_version = "2.29.1-alpha"
+    ext.hilt_version = "2.30.1-alpha"
     ext.hilt_jetpack_version = '1.0.0-alpha02'
     ext.activity_ktx_version = "1.1.0"
+    ext.app_compat_version = "1.2.0"
+    ext.ktx_version = "1.3.2"
     ext.fragment_ktx_version = '1.2.5'
-    ext.navigation_version = "2.3.1"
+    ext.navigation_version = "2.3.2"
     ext.lifecycle_version = "2.2.0"
-    ext.room_version = "2.2.5"
+    ext.room_version = "2.2.6"
+    ext.coroutine_version = "1.3.9"
+    ext.constraint_layout_version = "2.0.4"
+    ext.material_version = "1.2.1"
     ext.retrofit_version = "2.9.0"
     ext.logging_interceptor_version = "4.9.0"
+    ext.shimmer_version = "0.5.0"
+    ext.lottie_version = "3.5.0"
 
     repositories {
         google()
