--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+RELEASE_STORE_FILE=D:\\dev\\key\\tempkeystore.jks
+RELEASE_STORE_PASSWORD=asdf123
+RELEASE_KEY_ALIAS=dargoz
+RELEASE_KEY_PASSWORD=asdf123
