--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
     signingConfigs {
 
         release {
-            storeFile file(RELEASE_STORE_FILE)
+            storeFile rootProject.file('sign/tempkeystore.jks')
             storePassword RELEASE_STORE_PASSWORD
             keyAlias RELEASE_KEY_ALIAS
             keyPassword RELEASE_KEY_PASSWORD
